--- a/lagoon.yaml
+++ b/lagoon.yaml
@@ -46,7 +46,8 @@ providers:
   aws:
     component: aws
     params:
-      region: "us-west-1"
+      region: "eu-west-3"
+      assign_public_ip: False
     proxy:
       http_proxy: {{ .proxy_http }}
       https_proxy: {{ .proxy_https }}
