--- a/lagoon.yaml
+++ b/lagoon.yaml
@@ -49,8 +49,8 @@ providers:
       assign_public_ip: False
     proxy:
       http_proxy: {{ .proxy_http }}
-      https_proxy: "{{ .proxy_https }}"
-      no_proxy: {{ .proxy_no }}
+      https_proxy: {{ .proxy_https }}
+      no_proxy: "{{ .proxy_no }}"
     env:
       AWS_REGION: {{ .aws_region }}
       AWS_ACCESS_KEY_ID: {{ .aws_access_key_id }}
