--- a/ekara.yaml
+++ b/ekara.yaml
@@ -37,7 +37,7 @@ providers:
   aws:
     component: aws
     params:
-      region: "us-west-1"
+      region: "eu-west-1"
       
     env:
       AWS_REGION: {{ .aws_region }}
