--- a/ekara.yaml
+++ b/ekara.yaml
@@ -52,7 +52,7 @@ nodes:
       name: aws
       params:
         instance_type: "t2.micro"
-        #ami_id: "ami-f90a4880"
+        ami_id: "ami-f90a4880"
         vpc_id: "vpc-880aeaef"
         region: "eu-west-1"
         security_groups:
