--- a/ekara.yaml
+++ b/ekara.yaml
@@ -50,6 +50,9 @@ nodes:
     instances: 3        
     provider:
       name: aws
+      labels
+        label1_key: "label1_value"
+        label2_key: "label2_value"
       params:
         instance_type: "t2.micro"
         ami_id: "ami-f90a4880"
