--- a/citadel.yaml
+++ b/citadel.yaml
@@ -77,6 +77,7 @@ nodes:
         no_proxy: "{{ .proxy_no }}"
 
       params:
+        prefix_names: noreflex 
         image: PSA_Ubuntu_16.04
 
         private_network: beos0051_net_dev
