--- a/ekara.yaml
+++ b/ekara.yaml
@@ -1,5 +1,5 @@
 name: HookTest
-qualifier: GBE
+qualifier: gbe
 
 ekara:
   components:
@@ -123,9 +123,10 @@ nodes:
     hooks:
       provision:
         before:
-          - task: hellotask  
+          - task: hellotask
         after:
-          - task: hellotask  
+          - task: hellotask
+
 stacks:
   visualizer:
     component: visualizer
