--- a/ekara.yaml
+++ b/ekara.yaml
@@ -52,6 +52,27 @@ providers:
       AWS_ACCESS_KEY_ID: {{ .aws_access_key_id }}
       AWS_SECRET_ACCESS_KEY: {{ .aws_access_key }}
 
+hooks:
+  provision:
+    before:
+      - task: hellotask
+    after:
+      - task: hellotask
+  deploy:
+    before:
+      - task: hellotask
+    after:
+      - task: hellotask
+  undeploy:
+    before:
+      - task: hellotask
+    after:
+      - task: hellotask
+  destroy:
+    before:
+      - task: hellotask
+    after:
+      - task: hellotask
 
 
 nodes:
@@ -132,3 +153,14 @@ nodes:
 stacks:
   visualizer:
     component: visualizer
+    hooks:
+      deploy:
+        before:
+          - task: hellotask
+        after:
+          - task: hellotask
+      undeploy:
+        before:
+          - task: hellotask
+        after:
+          - task: hellotask
