--- a/test.yaml
+++ b/test.yaml
@@ -17,7 +17,7 @@ ekara:
      repository: https://github.psa-cloud.com/u063326/lagoon-distribution
      ref: reflex-addon    
      auth:
-       method: basic
+       method: password
        user: {{ .git_user }}
        password: {{ .git_password }}
      
