--- a/test.yaml
+++ b/test.yaml
@@ -17,10 +17,9 @@ ekara:
      repository: https://github.psa-cloud.com/u063326/lagoon-distribution
      ref: reflex-addon    
      auth:
-       method: basic
-       user: {{ .git_user }}
-       password: {{ .git_password }}
-     
+       method: token
+       token: {{ .git_token }}
+    
 tasks:
   testhook_pre:
     component: distrib
